# sit-liveclip

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  server.py  setup.cfg
sit_liveclip/: cli.py  config.py  experiment.py  types.py
sit_liveclip/core/: __init__.py  action.py  env.py  network.py  observation.py  player_connection.py
sit_liveclip/utils/: __init__.py  console.py  serializer.py
sit_liveclip/visualization/: __init__.py  colors.py  reset_matplotlib_style.py
